--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
       <img src="./assets/img/eye.gif" class="voight-kampff-screen" alt="Voight-Kampff" onload="fadeIn(this)" style="display:none;"> 
     </div>
     
-    <!-- medium & tumblr links -->
+    <!-- instagram link -->
     <div>
-      <a href="http://www.167ace.tumblr.com" target="_blank">  <img src="./assets/img/tumblr.png" class="tumblr" alt="logo"> </a>
-      <a href="https://medium.com/@dominicpburford" target="_blank">  <img src="./assets/img/medium.png" class="medium" alt="logo"> </a>
+      <a href="https://www.instagram.com/dominicsalvatore_/" target="_blank">  <img src="./assets/img/instagramlogo.png" class="tumblr" alt="logo"> </a>
     </div>
   
   <!-- highlight & slogan -->
